test/libsolidity/syntaxTests/pragma/broken_version_5.sol
pragma solidity 88_;
// ----
// ParserError 1684: (0-20): Invalid version pragma. Expected the start of a version number but instead found character '_'. Version number is invalid or the pragma is not terminated with a semicolon.
